# Ena-Code

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
ecode/: Cargo.toml
ena-code-core/: Cargo.toml
ena-code-core/src/: lib.rs  path_manager.rs
src/: arguments.rs  config.rs  dirs_and_files.rs  errors.rs  launcher.rs  main.rs  path_finder.rs  path_manager.rs
src/cli/: arguments.rs  main.rs
src/configs/: config.rs  dirs_and_files.rs  enarc.rs  mod.rs
src/core/: actions.rs  errors.rs  launcher.rs  lib.rs  path_manager.rs
src/core/configs/: config.rs  dirs_and_files.rs  mod.rs
src/ecode/: launcher.rs  main.rs
src/ecode/configs/: config.rs
src/manager/: actions.rs  config.rs  list.rs  main.rs  remove.rs
src/url-handler/: app.rs  error_message.rs  launcher.rs  main.rs
