[package]
name = "ecode"
version = "0.1.5"
authors = ["Takasakiii <lucasmc2709@live.com>"]
edition = "2018"
license = "Public Domain"
description = "Ena Code simple Visual Studio Code profile switcher."
homepage = "https://github.com/Takasakiii/Ena-Code"
documentation = "https://github.com/Takasakiii/Ena-Code"
repository = "https://github.com/Takasakiii/Ena-Code.git"
readme = "README.md"
keywords = ["dev", "editor", "code", "profile", "switch"]
categories = ["command-line-utilities"]

[lib]
name = "ena_code_core"
path = "src/core/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "ecode"
path = "src/cli/main.rs"
required-features = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dirs = "3.0.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = { version = "0.8.17", optional = true }
serde_json = { version = "1.0.64", optional = true }
clap = { version = "3.0.0-beta.2", optional = true }


[features]
default = ["config_yml", "cli"]
config_yml = ["serde_yaml"]
config_json = ["serde_json"]
cli = ["clap"]
