
[package]
name = "ecode"
version = "0.1.7"
authors = ["Takasakiii <lucasmc2709@live.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Ena Code simple Visual Studio Code profile switcher."
homepage = "https://github.com/Takasakiii/Ena-Code"
documentation = "https://github.com/Takasakiii/Ena-Code"
repository = "https://github.com/Takasakiii/Ena-Code.git"
readme = "README.md"
keywords = ["dev", "editor", "code", "profile", "switch"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "^0.8.17"
fs_extra = "^1.2.0"
dirs = "4.0.0"
scanln = "0.1.1"

[dependencies.serde]
version = "^1.0.125"
features = ["derive"]

[dependencies.clap]
version = "3.0.0-rc.4"
features = ["derive"]
