
[package]
name = "ecode"
version = "1.0.0"
authors = ["Takasakiii <lucasmc2709@live.com>"]
edition = "2018"
license = "Unlicense"
description = "Ena Code simple Visual Studio Code profile switcher."
homepage = "https://github.com/Takasakiii/Ena-Code"
documentation = "https://github.com/Takasakiii/Ena-Code"
repository = "https://github.com/Takasakiii/Ena-Code.git"
readme = "README.md"
keywords = ["dev", "editor", "code", "profile", "switch"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ecode"
path = "src/ecode/main.rs"

[[bin]]
name = "ecode-manager"
path = "src/manager/main.rs"

[[bin]]
name = "ecode-url-handler"
path = "src/url-handler/main.rs"


[lib]
name = "ecode_core"
path = "src/core/lib.rs"

[dependencies]
serde_yaml = "^0.8.17"
fs_extra = "^1.2.0"
dirs = "4.0.0"
scanln = "0.1.1"
serde = { version = "1.0.136", features = ["derive"] }
clap = { version = "3.0.0-rc.4", features = ["derive"] }
iced = "0.3.0"
